--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,8 @@ body{
 }
 #header{
     background-image: url(/assets/img/IMG_1631-removebg.png);
-    width: 100%;
-    height: 600px;
+    width: 75%;
+    height: 100vh;    
     background-size: contain;
     background-position: left center;
     background-repeat: no-repeat;
@@ -19,7 +19,7 @@ body{
 }
 
 .container{
-    padding: 10px 10%;
+   padding: auto;
 }
 nav{
     display: flex;
@@ -38,6 +38,7 @@ nav{
 }
 nav ul{
     display: flex;
+    align-items: flex-end;
     list-style: none;
 }
 nav ul li{
